2003-06-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: De-uglify center_person frame.
	* src/plugins/BookReport.py: Add a center person column to a book
	selector dialog.
	* src/plugins/FtmStyleDescendants.py: Get the style right.

2003-06-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py, src/plugins/BookReport.py, 
	src/plugins/FtmStyleDescendants.py: Fix changing center person -- only
	remember change if OK was clicked.

2003-06-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: Clean up the split into BareReportDialog and
	ReportDialog classes.
	* src/Plugins.py: Enable book item registration. 
	* src/plugins/BookReport.py: lots of changes -- trying to get it work. 
	* src/plugins/FtmStyleDescendants.py: book item functionality. 

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>

	* src/EditPerson.py: Allow a default gender to be specified if a new
	person is being added
	* src/AddSpouse.py: All EditPerson dialog instead of QuickAdd

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>

	* src/FamilyView.py: Call marriage editor with callback to update
	the family view
	* src/Marriage.py: Call the family view callback after saving to update
	the display with changed marriage information

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>

	* src/EditPerson.py:
	Don't reset date value after a page switch

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py:
	Fixed typo in on_drag_begin
	* src/RelLib.py:
	Check for the existance of the witness member of an Event. ZODB
	stores an object, so elements read in from old databases may not 
	have the element, which can cause a traceback.

2003-06-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AutoComp.py:
	Don't build popdown lists if the number of elements exceeds 250.
	Otherwise, the menus will become unusable, and just consume
	tons of memory.
